[project]
name = "steal-my-neko"
dynamic = ["version"]
description = "ðŸˆ Awesome Telegram parser & poster configured to steal nekos."
authors = [
    { name="unxho", email="u@n.xho" }
]
readme = "README.md"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/unxho/steal-my-neko"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
telethon = "^1.40"
httpx = { version = "^0.28.1", extras = ["http2"] }
aiofile = "^3.9.0"
orjson = { version = "^3.11.0", optional = true }
uvloop = { version = "^0.21", optional = true }
cryptg = { version = "^0.5.0.post0", optional = true }
coloredlogs = { version = "^15.0.1", optional = true }
tqdm = { version = "^4.67.1", optional = true }

[tool.poetry.extras]
speedups = ["orjson", "uvloop", "cryptg"]
ui = ["coloredlogs", "tqdm"]

[tool.ruff]
target-version = "py39"
select = ["PL", "E", "F", "W", "C", "B", "I", "UP", "G"]
line-length = 84
ignore = ["PLW0603", "PLW0602", "PLR0913", "PLR0912", "PLR0911", "C901", "E402"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E501"]

[tool.ruff.pylint]
allow-magic-value-types = ["str", "bytes", "int", "float"]

[[tool.mypy.overrides]]
module = ["telethon.*", "tqdm.*", "coloredlogs"]
ignore_missing_imports = true

[tool.black]
line-length = 84

[tool.isort]
profile = 'black'

[tool.pyright]
typeCheckingMode = "standard"
reportArgumentType = false
reportAttributeAccessIssue = false
